After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 590513 - Error messages like »Unable to ... location« may need comments for translators
Error messages like »Unable to ... location« may need comments for translators
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.27.x
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-08-02 10:02 UTC by Jochen Skulj
Modified: 2012-08-22 13:01 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28


Attachments
Use more specific text for unmount/eject error messages (2.92 KB, patch)
2012-08-21 14:50 UTC, William Jon McCann
committed Details | Review
Set parent for all mount/eject error dialogs (6.85 KB, patch)
2012-08-21 14:50 UTC, William Jon McCann
reviewed Details | Review
Set parent for all mount/eject error dialogs (6.82 KB, patch)
2012-08-21 15:27 UTC, William Jon McCann
committed Details | Review

Description Jochen Skulj 2009-08-02 10:02:46 UTC
Please describe the problem:
The latest po file contains strings like

#: ../src/file-manager/fm-directory-view.c:5984
msgid "Unable to unmount location"

#: ../src/file-manager/fm-directory-view.c:5999
msgid "Unable to eject location"

I find these strings really hard translate since I can't imagine how to unmount or eject a location. Some comments for translators may be helpful here.

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Christian Kirbach 2009-08-02 15:32:26 UTC
Or, modify the strings to something a common citizen can comprehend.
Comment 2 A. Walton 2009-08-03 19:09:40 UTC
I think the idea was to remove eject in favor of unmount or visa versa. CC'd David to see which way this is supposed to be.
Comment 3 Allan Day 2010-06-21 19:35:43 UTC
Cosimo changed the unmount/eject entries recently. CCing him.
Comment 4 William Jon McCann 2012-08-21 14:50:22 UTC
Created attachment 222016 [details] [review]
Use more specific text for unmount/eject error messages
Comment 5 William Jon McCann 2012-08-21 14:50:24 UTC
Created attachment 222017 [details] [review]
Set parent for all mount/eject error dialogs
Comment 6 Cosimo Cecchi 2012-08-21 15:13:25 UTC
Review of attachment 222017 [details] [review]:

::: src/nautilus-view.c
@@ +6618,3 @@
+
+	view = NAUTILUS_VIEW (callback_data);
+	g_object_unref (view);

What reference are you releasing here? Was it leaked before?
Comment 7 Cosimo Cecchi 2012-08-21 15:14:22 UTC
Review of attachment 222016 [details] [review]:

Looks good to me, but we're now in string change announcement period, so we should send a mail to gnome-i18n@ when pushing this.
Comment 8 William Jon McCann 2012-08-21 15:27:12 UTC
Created attachment 222033 [details] [review]
Set parent for all mount/eject error dialogs

I was following the example from file_unmount_callback but I don't think we need
to add the ref to the user data in nautilus_file_mount.
Comment 9 Cosimo Cecchi 2012-08-21 16:31:42 UTC
Review of attachment 222033 [details] [review]:

Looks good now, thanks.
Comment 10 William Jon McCann 2012-08-22 13:01:27 UTC
Attachment 222016 [details] pushed as e864875 - Use more specific text for unmount/eject error messages
Attachment 222033 [details] pushed as f789398 - Set parent for all mount/eject error dialogs