Use more specific text for unmount/eject error messages

https://bugzilla.gnome.org/show_bug.cgi?id=590513