src/nautilus-mime-actions.c
@@ -1851,8 +1851,7 @@ activation_mount_not_mounted_callback (GObject *source_object,
 		    (error->code != G_IO_ERROR_CANCELLED &&
 		     error->code != G_IO_ERROR_FAILED_HANDLED &&
 		     error->code != G_IO_ERROR_ALREADY_MOUNTED)) {
-			eel_show_error_dialog (_("Unable to mount location"),
-					       error->message, parameters->parent_window);
+			eel_show_error_dialog (_("Unable to access location"), error->message, parameters->parent_window);
 		}
 
 		if (error->domain != G_IO_ERROR ||
@@ -2125,7 +2124,7 @@ activation_mountable_mounted (NautilusFile  *file,
 		    (error->code != G_IO_ERROR_CANCELLED &&
 		     error->code != G_IO_ERROR_FAILED_HANDLED &&
 		     error->code != G_IO_ERROR_ALREADY_MOUNTED)) {
-			eel_show_error_dialog (_("Unable to mount location"),
+			eel_show_error_dialog (_("Unable to access location"),
 					       error->message, parameters->parent_window);
 		}
 
