src/nautilus-view.c
@@ -6631,8 +6631,14 @@ file_mount_callback (NautilusFile  *file,
 	     (error->code != G_IO_ERROR_CANCELLED &&
 	      error->code != G_IO_ERROR_FAILED_HANDLED &&
 	      error->code != G_IO_ERROR_ALREADY_MOUNTED))) {
-		eel_show_error_dialog (_("Unable to mount location"),
-				       error->message, NULL);
+		char *text;
+		char *name;
+		name = nautilus_file_get_display_name (file);
+		/* Translators: %s is a file name formatted for display */
+		text = g_strdup_printf (_("Unable to access “%s”"), name);
+		eel_show_error_dialog (text, error->message, NULL);
+		g_free (text);
+		g_free (name);
 	}
 }
 
@@ -6651,8 +6657,14 @@ file_unmount_callback (NautilusFile  *file,
 	    (error->domain != G_IO_ERROR ||
 	     (error->code != G_IO_ERROR_CANCELLED &&
 	      error->code != G_IO_ERROR_FAILED_HANDLED))) {
-		eel_show_error_dialog (_("Unable to unmount location"),
-				       error->message, NULL);
+		char *text;
+		char *name;
+		name = nautilus_file_get_display_name (file);
+		/* Translators: %s is a file name formatted for display */
+		text = g_strdup_printf (_("Unable to remove “%s”"), name);
+		eel_show_error_dialog (text, error->message, NULL);
+		g_free (text);
+		g_free (name);
 	}
 }
 
@@ -6671,8 +6683,14 @@ file_eject_callback (NautilusFile  *file,
 	    (error->domain != G_IO_ERROR ||
 	     (error->code != G_IO_ERROR_CANCELLED &&
 	      error->code != G_IO_ERROR_FAILED_HANDLED))) {
-		eel_show_error_dialog (_("Unable to eject location"),
-				       error->message, NULL);
+		char *text;
+		char *name;
+		name = nautilus_file_get_display_name (file);
+		/* Translators: %s is a file name formatted for display */
+		text = g_strdup_printf (_("Unable to eject “%s”"), name);
+		eel_show_error_dialog (text, error->message, NULL);
+		g_free (text);
+		g_free (name);
 	}
 }
 
@@ -6778,8 +6796,14 @@ file_start_callback (NautilusFile  *file,
 	     (error->code != G_IO_ERROR_CANCELLED &&
 	      error->code != G_IO_ERROR_FAILED_HANDLED &&
 	      error->code != G_IO_ERROR_ALREADY_MOUNTED))) {
-		eel_show_error_dialog (_("Unable to start location"),
-				       error->message, NULL);
+		char *text;
+		char *name;
+		name = nautilus_file_get_display_name (file);
+		/* Translators: %s is a file name formatted for display */
+		text = g_strdup_printf (_("Unable to start “%s”"), name);
+		eel_show_error_dialog (text, error->message, NULL);
+		g_free (text);
+		g_free (name);
 	}
 }
 
